--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,25 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+canvas {
+  width:85vw !important;
+  height: 600px !important;
+}
+
+@media screen and (max-width: 600px) {
+  canvas {
+    width: 100vw !important;
+    height: 300px !important;
+  }
+}
+
+@media screen and (min-width: 600px) and (max-width:1000px) {
+  canvas {
+    width: 100vw !important;
+    height: 400px !important;
+  }
+
+}
 
 .App-header {
   background-color: #282c34;
